export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "properties": {
          "test": 1
        },
        "id": [],
        "required": [
          "test"
        ],
        "policies": {
          "test": [
            0
          ]
        }
      },
      {
        "type": "function",
        "title": "root_test_fn",
        "input": 2,
        "output": 18,
        "runtimeConfig": null,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 14,
          "an_email": 17
        },
        "id": [],
        "required": [],
        "policies": {
          "a_string": [],
          "a_float": [],
          "an_enum": [],
          "an_integer_enum": [],
          "a_float_enum": [],
          "a_struct": [],
          "nested": [],
          "nested_with_ref": [],
          "an_email": []
        }
      },
      {
        "type": "string",
        "title": "scalar_string_1"
      },
      {
        "type": "float",
        "title": "scalar_float_1",
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "scalar_string_enum_1",
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ]
      },
      {
        "type": "integer",
        "title": "scalar_integer_enum_1",
        "enum": [
          "1",
          "2"
        ]
      },
      {
        "type": "float",
        "title": "scalar_float_2",
        "enum": [
          "1.5",
          "2.5"
        ]
      },
      {
        "type": "object",
        "title": "ComplexType_a_struct_struct",
        "properties": {
          "value": 9
        },
        "id": [],
        "required": [],
        "policies": {
          "value": []
        }
      },
      {
        "type": "float",
        "title": "scalar_float_3"
      },
      {
        "type": "optional",
        "title": "ComplexType_nested_ComplexType_nested_ComplexType_nested_either_list_optional",
        "item": 11,
        "default_value": null
      },
      {
        "type": "list",
        "title": "ComplexType_nested_ComplexType_nested_either_list",
        "items": 12
      },
      {
        "type": "either",
        "title": "ComplexType_nested_either",
        "oneOf": [
          3,
          13
        ]
      },
      {
        "type": "integer",
        "title": "scalar_integer_1"
      },
      {
        "type": "object",
        "title": "SomeType",
        "properties": {
          "one": 15,
          "two": 16
        },
        "id": [],
        "required": [],
        "policies": {
          "one": [],
          "two": []
        }
      },
      {
        "type": "list",
        "title": "Two",
        "items": 13,
        "minItems": 3
      },
      {
        "type": "optional",
        "title": "SomeType_two_SomeType_optional",
        "item": 14,
        "default_value": null
      },
      {
        "type": "string",
        "title": "scalar_string_email_1",
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "scalar_boolean_1"
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => true",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "pass"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;

snapshot[`typegraphs creation 2`] = `
\`[
  {
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "properties": {
          "add": 1,
          "multiply": 4
        },
        "id": [],
        "required": [
          "add",
          "multiply"
        ],
        "policies": {
          "add": [
            0
          ],
          "multiply": [
            0
          ]
        }
      },
      {
        "type": "function",
        "title": "root_add_fn",
        "input": 2,
        "output": 3,
        "runtimeConfig": null,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "scalar_struct_shared_1",
        "properties": {
          "first": 3,
          "second": 3
        },
        "id": [],
        "required": [],
        "policies": {
          "first": [],
          "second": []
        }
      },
      {
        "type": "float",
        "title": "scalar_float_1"
      },
      {
        "type": "function",
        "title": "root_multiply_fn",
        "input": 2,
        "output": 3,
        "runtimeConfig": null,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "sha256_5ac5ebaa386435a02b0a96c48af3bf5d26e4d9ce29e5c9b54660b88b6dc3eea6",
          "fn": "lambda x: (x['first'] + x['second'])"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "pass"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = ({ first, second }) => first * second",
          "secrets": []
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]\`
`;

snapshot[`typegraphs creation 3`] = `
\`[
  {
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "properties": {
          "one": 1,
          "two": 6,
          "three": 9
        },
        "id": [],
        "required": [
          "one",
          "two",
          "three"
        ],
        "policies": {
          "one": [
            0
          ],
          "two": [
            1
          ],
          "three": [
            2
          ]
        }
      },
      {
        "type": "function",
        "title": "root_one_fn",
        "input": 2,
        "output": 5,
        "runtimeConfig": null,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "scalar_struct_shared_1",
        "properties": {
          "a": 3,
          "b": 4
        },
        "id": [],
        "required": [],
        "policies": {
          "a": [],
          "b": []
        }
      },
      {
        "type": "integer",
        "title": "scalar_integer_1"
      },
      {
        "type": "integer",
        "title": "scalar_integer_2",
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "scalar_integer_3",
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "root_two_fn",
        "input": 7,
        "output": 8,
        "runtimeConfig": null,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "properties": {
          "id": 3,
          "post": 8
        },
        "id": [],
        "required": [],
        "policies": {
          "id": [],
          "post": []
        }
      },
      {
        "type": "object",
        "title": "Post",
        "properties": {
          "id": 3,
          "author": 7
        },
        "id": [],
        "required": [],
        "policies": {
          "id": [],
          "author": []
        }
      },
      {
        "type": "function",
        "title": "root_three_fn",
        "input": 2,
        "output": 2,
        "runtimeConfig": null,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => 12",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "internal_policy"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = (user) => ({ id: 12, user })",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => 'DENY'",
          "secrets": []
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "entryPoint": "scripts/three.ts",
          "deps": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "pass"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {
        "scripts/three.ts": {
          "path": "scripts/three.ts",
          "hash": "16352d61551cb6d6a8c54efb8179858a4aadb1110517a8dbbf9932a5d71bb51a",
          "size": 318
        }
      }
    }
  }
]\`
`;

snapshot[`typegraphs creation 4`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "properties": {
          "test": 1
        },
        "id": [],
        "required": [
          "test"
        ],
        "policies": {
          "test": [
            0
          ]
        }
      },
      {
        "type": "function",
        "title": "root_test_fn",
        "input": 2,
        "output": 18,
        "runtimeConfig": null,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 14,
          "an_email": 17
        },
        "id": [],
        "required": [],
        "policies": {
          "a_string": [],
          "a_float": [],
          "an_enum": [],
          "an_integer_enum": [],
          "a_float_enum": [],
          "a_struct": [],
          "nested": [],
          "nested_with_ref": [],
          "an_email": []
        }
      },
      {
        "type": "string",
        "title": "scalar_string_1"
      },
      {
        "type": "float",
        "title": "scalar_float_1",
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "scalar_string_enum_1",
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ]
      },
      {
        "type": "integer",
        "title": "scalar_integer_enum_1",
        "enum": [
          "1",
          "2"
        ]
      },
      {
        "type": "float",
        "title": "scalar_float_2",
        "enum": [
          "1.5",
          "2.5"
        ]
      },
      {
        "type": "object",
        "title": "ComplexType_a_struct_struct",
        "properties": {
          "value": 9
        },
        "id": [],
        "required": [],
        "policies": {
          "value": []
        }
      },
      {
        "type": "float",
        "title": "scalar_float_3"
      },
      {
        "type": "optional",
        "title": "ComplexType_nested_ComplexType_nested_ComplexType_nested_either_list_optional",
        "item": 11,
        "default_value": null
      },
      {
        "type": "list",
        "title": "ComplexType_nested_ComplexType_nested_either_list",
        "items": 12
      },
      {
        "type": "either",
        "title": "ComplexType_nested_either",
        "oneOf": [
          3,
          13
        ]
      },
      {
        "type": "integer",
        "title": "scalar_integer_1"
      },
      {
        "type": "object",
        "title": "SomeType",
        "properties": {
          "one": 15,
          "two": 16
        },
        "id": [],
        "required": [],
        "policies": {
          "one": [],
          "two": []
        }
      },
      {
        "type": "list",
        "title": "Two",
        "items": 13,
        "minItems": 3
      },
      {
        "type": "optional",
        "title": "SomeType_two_SomeType_optional",
        "item": 14,
        "default_value": null
      },
      {
        "type": "string",
        "title": "scalar_string_email_1",
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "scalar_boolean_1"
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => true",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "pass"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;

snapshot[`typegraphs creation 5`] = `
\`[
  {
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "properties": {
          "add": 1,
          "multiply": 4
        },
        "id": [],
        "required": [
          "add",
          "multiply"
        ],
        "policies": {
          "add": [
            0
          ],
          "multiply": [
            0
          ]
        }
      },
      {
        "type": "function",
        "title": "root_add_fn",
        "input": 2,
        "output": 3,
        "runtimeConfig": null,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "scalar_struct_shared_1",
        "properties": {
          "first": 3,
          "second": 3
        },
        "id": [],
        "required": [],
        "policies": {
          "first": [],
          "second": []
        }
      },
      {
        "type": "float",
        "title": "scalar_float_1"
      },
      {
        "type": "function",
        "title": "root_multiply_fn",
        "input": 2,
        "output": 3,
        "runtimeConfig": null,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "sha256_1ba371f8249eab0c77239207fa3c16506224b5c287f58aa5ff322450a6aee50d",
          "fn": "lambda x: x['first'] + x['second']"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "pass"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = ({first, second}) => first * second",
          "secrets": []
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]\`
`;

snapshot[`typegraphs creation 6`] = `
\`[
  {
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "properties": {
          "one": 1,
          "two": 6,
          "three": 9
        },
        "id": [],
        "required": [
          "one",
          "two",
          "three"
        ],
        "policies": {
          "one": [
            0
          ],
          "two": [
            1
          ],
          "three": [
            2
          ]
        }
      },
      {
        "type": "function",
        "title": "root_one_fn",
        "input": 2,
        "output": 5,
        "runtimeConfig": null,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "scalar_struct_shared_1",
        "properties": {
          "a": 3,
          "b": 4
        },
        "id": [],
        "required": [],
        "policies": {
          "a": [],
          "b": []
        }
      },
      {
        "type": "integer",
        "title": "scalar_integer_1"
      },
      {
        "type": "integer",
        "title": "scalar_integer_2",
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "scalar_integer_3",
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "root_two_fn",
        "input": 7,
        "output": 8,
        "runtimeConfig": null,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "properties": {
          "id": 3,
          "post": 8
        },
        "id": [],
        "required": [],
        "policies": {
          "id": [],
          "post": []
        }
      },
      {
        "type": "object",
        "title": "Post",
        "properties": {
          "id": 3,
          "author": 7
        },
        "id": [],
        "required": [],
        "policies": {
          "id": [],
          "author": []
        }
      },
      {
        "type": "function",
        "title": "root_three_fn",
        "input": 2,
        "output": 2,
        "runtimeConfig": null,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => 12",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "internal_policy"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = (user) => ({ id: 12, user })",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => 'DENY'",
          "secrets": []
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "entryPoint": "scripts/three.ts",
          "deps": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "pass"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {
        "scripts/three.ts": {
          "path": "scripts/three.ts",
          "hash": "16352d61551cb6d6a8c54efb8179858a4aadb1110517a8dbbf9932a5d71bb51a",
          "size": 318
        }
      }
    }
  }
]\`
`;
